tests/snapshots/fixtures__imdb_rhs_same_table_output.snap
---
source: tests/tests/fixtures.rs
expression: contents
---
[
  {
    "id": 1,
    "movie_id": 2525976
  },
  {
    "id": 2,
    "movie_id": 3062
  },
  {
    "id": 3,
    "movie_id": 4288
  }
]
