tests/snapshots/fixtures__imdb_scalar_clause_list_diagnostics.snap
---
source: tests/tests/fixtures.rs
expression: contents
---
Check Error PredicateTypeMismatch 50..56: field `id` expects int but predicate uses string
Check Error ScalarClauses 71..75: field `note` is a scalar (text); only relations can have clauses
