tests/snapshots/fixtures__imdb_scoped_relation_predicate_format.snap
---
source: tests/tests/fixtures.rs
expression: contents
---
query ScopedRelationPredicate {
  title(where .aka_title::movie_id.title like "%foo%" limit 1) {
    id
    title
  }
}
