tests/snapshots/fixtures__imdb_scoped_relation_predicate_sql.snap
---
source: tests/snapshot/fixtures.rs
expression: contents
---
-- title
select
  COALESCE(
    JSON_AGG(
      JSON_BUILD_OBJECT(
        'id',
        "title_d4d9f554"."id",
        'title',
        "title_d4d9f554"."title"
      )
    ),
    '[]'
  ) as "title_result_d4d9f554"
from
  (
    select
      *
    from
      "public"."title" as "title_d4d9f554"
    where
      exists (
        select
          1
        from
          "public"."aka_title" as "aka_title_3d091d70"
        where
          "aka_title_3d091d70"."movie_id" = "title_d4d9f554"."id"
          and ("aka_title_3d091d70"."title" like '%foo%')
      )
    limit
      1
  ) as "title_d4d9f554"
