tests/snapshots/fixtures__imdb_title_basic_format.snap
---
source: tests/tests/fixtures.rs
assertion_line: 185
expression: contents
---
query TitleLookup {
  title(where .id > 0 order by id asc limit 2) {
    id
    title
    production_year
    kind_type {
      kind
    }
  }
}
