tests/snapshots/fixtures__imdb_title_smoke_format.snap
---
source: tests/tests/fixtures.rs
expression: contents
---
query TitleSmoke {
  title(where id > 0 order by id asc limit 2) {
    id
    title
    production_year
    kind_type {
      kind
    }
  }
}
